fix: Fix Dimension Pager info [DHIS2-15613]